ctm-sf-homeloan-app/main/default/objects/HLA_TaskListEvent__e/HLA_TaskListEvent__e.object-meta.xml
<CustomObject>
    <description
  >Platform event to represent an Insert or Update to the Residential Home Loan application Task List</description>
    <label>HLA_TaskList Event</label>
    <pluralLabel>HLA_TaskListEvent</pluralLabel>
</CustomObject>