ctm-sf-homeloan-app/main/default/objects/HLA_TaskListEvent__e/fields/OriginatedInternally__c.field-meta.xml
<CustomField>
    <fullName>OriginatedInternally__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Flag to indicate if this event originated internally</description>
    <label>Originated Internally</label>
    <type>Checkbox</type>
</CustomField>