ctm-sf-homeloan-app/main/default/objects/HLA_TaskListEvent__e/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>