ctm-sf-homeloan-app/main/default/objects/HLA_TaskListEvent__e/fields/TaskListJSON__c.field-meta.xml
<CustomField>
    <fullName>TaskListJSON__c</fullName>
    <label>Task List JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>